# Parse.md

./: .gitignore  Approach.md  CMakeLists.txt  README.md  demo.cpp  lexer.cpp  lexer.h  parse.cpp  parse.h  test.cpp
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  bmark.cpp  gendata.md  randomData.py  readme.md
include/parsemd/: block.h  delimiterstack.h  internal.h  node.h  parser.h  scanner.h  types.h  utils.h
src/parsemd/: delimiterstack.cpp  internal.cpp  node.cpp  parser.cpp  scanner.cpp  types.cpp  utils.cpp
tests/: CMakeLists.txt  test.cpp  test_block.cpp  test_heading.cpp  test_inline.cpp  test_tree.cpp
